--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,13 @@ dist: trusty
 os:
  - linux
 
-osx_image: xcode6.4
-
 compiler:
  - clang
  - gcc
 
 matrix:
  exclude:
-  - os: osx
-    compiler: gcc
+    compiler: clang
 
 git:
   submodules: false
