--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ dist: trusty
 
 os:
  - linux
- - osx
+# - osx
 
-osx_image: xcode6.4
+#osx_image: xcode6.4
 
 compiler:
  - clang
- - gcc
+# - gcc
 
 #env:
 #  global:
@@ -20,10 +20,10 @@ compiler:
  #  # Test mode is for testing if it's working with Coverity. Change to true if testing, to avoid reaching the quota.
  #  - coverity_scan_script_test_mode=false
 
-matrix:
- exclude:
-  - os: osx
-    compiler: gcc
+#matrix:
+# exclude:
+#  - os: osx
+#    compiler: gcc
 
 git:
   submodules: false
@@ -78,13 +78,12 @@ addons:
     - libstdc++-5-dev
     - lib32stdc++6
     - zlib1g-dev
-  coverity_scan:
-    project:
-      name: $TRAVIS_REPO_SLUG
-      description: "PS3 emulator/debugger"
-    notification_email: raul.tambre@gmail.com
-    build_command: "make -j 4"
-    branch_pattern: coverity_scan
+#  coverity_scan:
+#    project:
+#      name: $TRAVIS_REPO_SLUG
+#      description: "PS3 emulator/debugger"
+#    build_command: "make -j 4"
+#    branch_pattern: coverity_scan
 
 after_success:
 - if [ "$COVERITY_SCAN_BRANCH" != 1 ] && [ "$TRAVIS_OS_NAME" = linux ]; then coveralls --extension .c --extension .cpp --extension .h; fi
